--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -239,7 +239,7 @@ knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig1D.PNG")
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig1E.PNG")
 ```
 
-In Figure 1 and 2 (cells a, b and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The *F*-test and *F\**-test only marginally deviate from the nominal 5%, regardless of the underlying distribution and the *SD*-ratio. The *W*-test also only marginally deviates from the nominal 5%, except under asymmetry (the tests becomes a little more sensitive) or extremely heavy tails (the test becomes a bit more conservative), consistently with observations in @Harwell_et_al_1992. However, deviations don't exceed the liberal criterion of @Bradley_1978.
+In Figures 1 and 2 (cells a, b and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The *F*-test and *F\**-test only marginally deviate from the nominal 5%, regardless of the underlying distribution and the *SD*-ratio. The *W*-test also only marginally deviates from the nominal 5%, except under asymmetry (the tests becomes a little more liberal) or extremely heavy tails (the test becomes a bit more conservative), consistently with observations in @Harwell_et_al_1992. However, deviations don't exceed the liberal criterion of @Bradley_1978.
 
 In Figures 3, 4 and 5 (cells d to i, Table 1) the population variance is unequal between groups, so that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figure 3) and when there is a positive correlation between sample sizes and *SDs* (Figure 4), the Type I error rate of the *W*-test is closer to the nominal 5% than the Type I error rate of the *F\**-test and the *F*-test, the latter which is consistently at the lower limit of the liberal interval suggested by Bradley, in line with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995. Heteroscedasticity does not impact the Type I error rate of the *W*-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions). 
 
