--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -42,12 +42,14 @@ linenumbers       : yes
 mask              : no
 draft             : no
 
+
 documentclass     : "apa6"
 classoption       : "man"
 output:
   papaja::apa6_pdf:
     includes:
       after_body: "Appendix.tex"
+      fig_caption       : FALSE
 ---
 
   
@@ -96,17 +98,13 @@ Third, bounded measures can also explain non-normal distributions. Examples can 
 
 Homogeneity of variances (or homoscedasticity) is a mathematical requirement that is also ecologically unlikely [@Erceg-Hurn_Mirosevich_2008; @Grissom_2000]. In a previous paper [@Delacre_et_al_2017], we identified three different causes of heteroscedasticity: the variability inherent to the use of measured variables, the variability induced by quasi-experimental treatments on measured variables, and the variability induced by different experimental treatments on randomly assigned subjects. One additional source of variability is the presence of unidentified moderators [@Cohen_et_al_2013].
 
-First, psychologists, as many scholars from various fields in human sciences, often use measured variables (e.g. age, gender, educational level, ethnic origin, depression level, etc.) instead of random assignment to conditions. Prior to any treatment, parameters of pre-existing groups can vary largely from one population to another, as suggested by @Henrich_et_al_2010. For example, @Green_et_al_2005 have shown that the scores of competitiveness, self-reliance and interdependence are more variable in some ethnic groups than in others. This stands true for many pre-existing groups such as gender, cultures, or religions and for various outcomes [see for example @Adams_et_al_2014; @Beilmann_et_al_2014; @Church_et_al_2012; @Cohen_and_Hill_2007; @Haar_et_al_2014; @Montoya_Briggs_2013]. Moreover, groups are sometimes defined with the intention to have different variabilities. For example, as soon as a selective school admits its students based on the results of aptitude tests, the variability will be smaller compared to a school that accepts all students. 
+First, psychologists, as many scholars from various fields in human sciences, often use measured variables (e.g. age, gender, educational level, ethnic origin, depression level, etc.) instead of random assignment to conditions. Prior to any treatment, parameters of pre-existing groups can vary largely from one population to another, as suggested by @Henrich_et_al_2010. For example, @Green_et_al_2005 have shown that the scores of competitiveness, self-reliance and interdependence are more variable in some ethnic groups than in others. This stands true for many pre-existing groups such as gender, cultures, or religions and for various outcomes [see for example @Adams_et_al_2014; @Beilmann_et_al_2014; @Church_et_al_2012; @Cohen_and_Hill_2007; @Haar_et_al_2014; @Montoya_Briggs_2013]. Moreover, groups are sometimes defined with the intention to have different variabilities. For example, as soon as a selective school admits its students based on the results of aptitude tests, the variability will be smaller compared to a school that accepts all students.  
 
 Second, a quasi-experimental treatment can have different impacts on variances between pre-existing groups, that can even be of theoretical interest. For example, in the field of linguistics and social psychology, @Wasserman_and_Weseley_2009 investigated the impact of language gender structure on sexist attitudes of women and men. They tested differences between sexist attitude scores of subjects who read a text in English (i.e. a language without grammatical gender) or in Spanish (i.e. a language with grammatical gender). The results showed that (for a reason not explained by the authors), the women's score on the sexism dimension was more variable when the text was read in Spanish than in English ($SD_{spanish}=.80 > SD_{english}=.50$). For men, the reverse was true ($SD_{spanish}=.97 < SD_{english}=1.33$) \footnote{Note that this a didactic example, the differences have not been tested and might not differ statistically.}  
 
 Third, even when the variances of groups are the same before treatment (due to a complete succesful randomization in group assignment), unequal variances can emerge later, as a consequence of an experimental treatment [@Bryk_and_Raudenbush_1988;@Cumming_2013; @Erceg-Hurn_Mirosevich_2008;@Keppel_and_Wickens_2004;@Box_1954]. For example, @Koeser_and_Sczesny_2014 have compared arguments advocating either masculine generic or gender-fair language with control messages in order to test the impact of these conditions on the use of gender-fair wording (measured as a frequency). They report that the standard deviations increase after treatment in all experimental conditions.
-
-Fourth, more often than not, psychological processes are captured in situations where many variables are unidentified and/or left uncontrolled [@Cohen_et_al_2013]. Since some of these variables can act as moderators, they can generate heteroscedasticity. Indeed,  by definition, a moderator is a variable that will interact with factors, which implies that the effect of the moderator will be different between the several conditions of the same factor.   
-
 # Consequences of Assumption Violations.
-
-Assumptions violations would not be a matter per se, if the *F*-test was perfectly robust against departures from them [@Glass_et_al_1972]. When performing a test, two types of error can be made: Type I errors and Type II errors. A Type I error consists of falsely rejecting the null hypothesis in favour of an alternative hypothesis, and the Type I error rate ($\alpha$) is the proportion of tests that, when sampling many times from the same population, reject the null hypothesis when there is no true effect in the population. A Type II error consists of failing to reject the null hypothesis, and the Type II error rate ($\beta$) is the proportion of tests, when sampling many times from the same population, that fail to reject the null hypothesis when there is a true effect. Finally, the statistical power (1-$\beta$) is the proportion of tests, when sampling many times from the same population, that correctly reject the null hypothesis when there is a true effect in the population.
+Assumptions violations would not be a matter per se, if the *F*-test was perfectly robust against departures from them [@Glass_et_al_1972]. When performing a test, two types of errors can be made: Type I errors and Type II errors. A Type I error consists of falsely rejecting the null hypothesis in favour of an alternative hypothesis, and the Type I error rate ($\alpha$) is the proportion of tests that, when sampling many times from the same population, reject the null hypothesis when there is no true effect in the population. A Type II error consists of failing to reject the null hypothesis, and the Type II error rate ($\beta$) is the proportion of tests, when sampling many times from the same population, that fail to reject the null hypothesis when there is a true effect. Finally, the statistical power (1-$\beta$) is the proportion of tests, when sampling many times from the same population, that correctly reject the null hypothesis when there is a true effect in the population.
 
 ## Violation of the Normality Assumption
 
@@ -186,7 +184,7 @@ Population parameter values were chosen in order to illustrate the consequences 
 
 All possible combinations of *n*-ratio and *SD*-ratio were performed in order to distinguish positive pairings (the group with the largest sample size is extracted from the population with the largest *SD*), negative pairings (the group with the smallest sample size is extracted from the population with the  smallest *SD*), and no pairing (sample sizes and/or population *SD* are equal across all groups). All these conditions were tested with normal and non-normal distributions. When two groups are compared, conclusions for the three ANOVA tests (*F*, *F*\*, *W*) should yield identical error rates when compared to their equivalent *t*-tests [the *F*-test is equivalent to Student's *t*-test, and the *F*\*-test and *W*-test are equivalent to Welch's *t*-test; @Delacre_et_al_2017]. When there are more than three groups, the *F*-test becomes increasingly liberal as soon as the variances of the distributions in each group are not similar, even when sample sizes are equal between groups [@Harwell_et_al_1992; @Quensel_1947].  
  
-For didactic reasons, we will report only the results where we compare three groups (*k*=3). Increasing the number of groups increases how liberal all tests are. For interested readers, all figures for cases where we compare more than three groups are available here: . Overall, the higher the sample sizes, the less the distributions of the population underlying the samples impact the robustness of the tests [@Srivastava_1959]. However, increasing the sample sizes does not improve the robustness of the test when there is heteroscedasticity. Interested reader can see all details in the following Excell spreadsheet, available on github : « Type I error rate.xlsx ». 
+For didactic reasons, we will report only the results where we compare three groups (*k*=3). Increasing the number of groups increases how liberal all tests are. For interested readers, all figures for cases where we compare more than three groups are available here: https://osf.io/h4ks8/ . Overall, the larger the sample sizes, the less the distributions of the population underlying the samples impact the robustness of the tests [@Srivastava_1959]. However, increasing the sample sizes does not improve the robustness of the test when there is heteroscedasticity. Interested reader can see all details in the following Excell spreadsheet, available on github : « Type I error rate.xlsx ». 
 
 In sum, the simulations grouped over different sample sizes yield 9 conditions based on the *n*-ratio, *SD*-ratio, and sample size and variance pairing, as summarized in Table 1. 
 
@@ -205,6 +203,12 @@ Table 1.
 
 *Note.* The *n*-ratio is the sample size of the last group divided by the sample size of the first group. When all sample sizes are equal across groups, the *n*-ratio equals 1. When the sample size of the last group is higher than the sample size of the first group, *n*-ratio > 1, and when the sample size of the last group is smaller than the sample size of the first group, *n*-ratio < 1. *SD*-ratio is the population *SD* of the last group divided by the population *SD* of the first group. When all samples are extracted from populations with the same *SD*, the *SD*-ratio equals 1. When the last group is extracted from a population with a larger *SD* than all other groups, the *SD*-ratio > 1. When the last group is extracted from a population with a smaller *SD* than all other groups, the *SD*-ratio < 1. 
 
+In all Figures presented below, averaged results for each subcondition are presented under 7 different configurations of distributions, using the following legend:
+
+```{r "", echo=FALSE, fig.width = 100,fig.height=100,out.width = '400px',fig.cap = "Legend"}
+knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/legend.PNG")
+```
+
 ## Type I Error Rate of the *F*-test, *W*-test, and *F*\*-test
 
 As previously mentioned, the Type I error rate ($\alpha$) is the long-run frequency of observing significant results when the null-hypothesis is true. When means are equal across all groups the Type I error rate of all test should be equal to the nominal alpha level. We assessed the Type I error rate of the *F*-test, *W*-test and *F\**-test under 2560 scenarios using a nominal alpha level of 5%.
@@ -217,7 +221,7 @@ When there is no difference between means, the 9 cells of Table 1 simplify into 
 -	Unequal *n* and *SD* across groups, with positive correlation between *n* and *SD* (e and i)  
 - Unequal *n* and *SD* across groups, with negative correlation between *n* and *SD* (f and h)    
 
-In Figure 1 to 5, we computed the average Type I error rate of the three tests under these 5 subcategories. The light grey area corresponds to the liberal criterion from @Bradley_1978, who regards a departure from the nominal alpha level as acceptable whenever the Type I error rate falls within the interval [$.5 \times \alpha$; $1.5 \times \alpha$]. The dark grey area corresponds to the more conservative criterion from which departures from the nominal alpha is considered  negligible as long as the Type I error rate falls within the interval [$.9 \times \alpha$; $1.1 \times \alpha$].
+In Figure 2 to 6, we computed the average Type I error rate of the three tests under these 5 subcategories. The light grey area corresponds to the liberal criterion from @Bradley_1978, who regards a departure from the nominal alpha level as acceptable whenever the Type I error rate falls within the interval [$.5 \times \alpha$; $1.5 \times \alpha$]. The dark grey area corresponds to the more conservative criterion from which departures from the nominal alpha is considered  negligible as long as the Type I error rate falls within the interval [$.9 \times \alpha$; $1.1 \times \alpha$].
 
 ```{r "", echo=FALSE, fig.width = 100,fig.height=100,out.width = '400px',fig.cap = "Type I error rate of the F-test, W-test and F*-test when there are equal SDs across groups and equal sample sizes (cell a in Table 1)"}
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig1A.PNG")
@@ -236,14 +240,14 @@ knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig1D.PNG")
 ```
 
 ```{r "", echo=FALSE, fig.width = 100,fig.height=100,out.width = '400px',fig.cap = "Type I error rate of the F-test, W-test and F*-test when there are unequal SDs across groups, and negative correlation between sample sizes and SDs (cells f and g in Table 1)"}
-knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig1E.PNG")
+knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig1E.PNG") 
 ```
 
-In Figures 1 and 2 (cells a, b and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The *F*-test and *F\**-test only marginally deviate from the nominal 5%, regardless of the underlying distribution and the *SD*-ratio. The *W*-test also only marginally deviates from the nominal 5%, except under asymmetry (the tests becomes a little more liberal) or extremely heavy tails (the test becomes a bit more conservative), consistently with observations in @Harwell_et_al_1992. However, deviations don't exceed the liberal criterion of @Bradley_1978.
+In Figures 2 and 3 (cells a, b, and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The *F*-test and *F\**-test only marginally deviate from the nominal 5%, regardless of the underlying distribution and the *SD*-ratio. The *W*-test also only marginally deviates from the nominal 5%, except under asymmetry (the tests becomes a little more liberal) or extremely heavy tails (the test becomes a bit more conservative), consistently with observations in @Harwell_et_al_1992. However, deviations don't exceed the liberal criterion of @Bradley_1978.
 
-In Figures 3, 4 and 5 (cells d to i, Table 1) the population variance is unequal between groups, so that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figure 3) and when there is a positive correlation between sample sizes and *SDs* (Figure 4), the Type I error rate of the *W*-test is closer to the nominal 5% than the Type I error rate of the *F\**-test and the *F*-test, the latter which is consistently at the lower limit of the liberal interval suggested by Bradley, in line with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995. Heteroscedasticity does not impact the Type I error rate of the *W*-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions). 
+In Figures 4, 5, and 6 (cells d to i, Table 1) the population variance is unequal between groups, so that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figure 4) and when there is a positive correlation between sample sizes and *SDs* (Figure 5), the Type I error rate of the *W*-test is closer to the nominal 5% than the Type I error rate of the *F\**-test and the *F*-test, the latter which is consistently at the lower limit of the liberal interval suggested by Bradley, in line with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995. Heteroscedasticity does not impact the Type I error rate of the *W*-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions). 
 
-When there is a negative correlation between sample sizes and *SDs* (Figure 5), the Type I error rate of the *F\**-test is slightly closer of the nominal 5% than the Type I error rate of the *W*-test, for which the distributions (more specifically, the skewness) has a larger impact on the Type I error rate than when there is homoscedasticity. This is consistent with conclusions by @Lix_Keselman_Keselman_1996 about the Alexander-Govern and the James' second order tests (which return very similar results as the *W*-test, as we already mentioned). However, both tests still perform relatively well, contrary to the *F*-test that is much too liberal, in line with observations by @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995.
+When there is a negative correlation between sample sizes and *SDs* (Figure 6), the Type I error rate of the *F\**-test is slightly closer of the nominal 5% than the Type I error rate of the *W*-test, for which the distributions (more specifically, the skewness) has a larger impact on the Type I error rate than when there is homoscedasticity. This is consistent with conclusions by @Lix_Keselman_Keselman_1996 about the Alexander-Govern and the James' second order tests (which return very similar results as the *W*-test, as we already mentioned). However, both tests still perform relatively well, contrary to the *F*-test that is much too liberal, in line with observations by @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995.
 
 ### Conclusions
 
@@ -286,27 +290,27 @@ knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig2d.PNG")
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig2e.PNG")
 ```
 
-```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,negative correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell f in Table 1)"}
+```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, negative correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell f in Table 1)"}
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig2f.PNG")
 ```
 
-```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,negative correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell h in Table 1)"}
+```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, negative correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell h in Table 1)"}
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig2g.PNG")
 ```
 
-```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,positive correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell e  in Table 1)"}
+```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, positive correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell e  in Table 1)"}
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig2h.PNG")
 ```
 
-```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,positive correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell i  in Table 1)"}
+```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '400px',fig.cap = "Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, positive correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell i  in Table 1)"}
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig2i.PNG")
 ```
 
-In Figures 6, 7 and 8 (cells a, b and c in Table 1), the population variance is equal between all groups, meaning that the homoscedasticity assumption is met. When distributions are normal, the *W*-test is slightly less powerful than the *F*-test and *F\**-test, even through differences are very small. With all other distributions, the *W*-test is generally more powerful than the *F\**-test and *F*-test, even with heavy-tailed distributions, which is in contrast with previous findings [@Wilcox_1998]. @Wilcox_1998 concluded that there is a loss of power when means from heavy-tailed distributions (e.g. double exponential or a mixed normal distribution) are compared to means from normal distributions. This finding is based on the argument that heavy-tailed distributions are associated with bigger standard deviations than normal distributions, and that the effect size for such distributions is therefore smaller [@Wilcox_2011]. However, this conclusion is based on a common conflation of kurtosis and the standard deviation, which are completely independent [@DeCarlo_1997]. One can find distributions that have similar *SD* but different kurtosis (see Appendix 2). However, while the *W*-test is more powerful than the *F*-test and the *F\**-test in many situations,it is a bit less consistent with theoretical expectations than both other tests in the sense that the *W*-test is generally more powerful than expected (especially with high kurtosis, or when asymmetries go in opposite directions). This is due to the fact that the *W*-test is more impacted by the distribution shape, in line with observations by @Harwell_et_al_1992. Note that differences between *W*-test and other tests, in terms of consistency, are very small. 
+In Figures 7, 8 and 9 (cells a, b, and c in Table 1), the population variance is equal between all groups, meaning that the homoscedasticity assumption is met. When distributions are normal, the *W*-test is slightly less powerful than the *F*-test and *F\**-test, even through differences are very small. With all other distributions, the *W*-test is generally more powerful than the *F\**-test and *F*-test, even with heavy-tailed distributions, which is in contrast with previous findings [@Wilcox_1998]. @Wilcox_1998 concluded that there is a loss of power when means from heavy-tailed distributions (e.g. double exponential or a mixed normal distribution) are compared to means from normal distributions. This finding is based on the argument that heavy-tailed distributions are associated with bigger standard deviations than normal distributions, and that the effect size for such distributions is therefore smaller [@Wilcox_2011]. However, this conclusion is based on a common conflation of kurtosis and the standard deviation, which are completely independent [@DeCarlo_1997]. One can find distributions that have similar *SD* but different kurtosis (see Appendix 2). However, while the *W*-test is more powerful than the *F*-test and the *F\**-test in many situations,it is a bit less consistent with theoretical expectations than both other tests in the sense that the *W*-test is generally more powerful than expected (especially with high kurtosis, or when asymmetries go in opposite directions). This is due to the fact that the *W*-test is more impacted by the distribution shape, in line with observations by @Harwell_et_al_1992. Note that differences between *W*-test and other tests, in terms of consistency, are very small. 
 
-In Figures 9 to 14 (cells d to i in Table 1), the population variance is unequal between groups, meaning that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figures 9 and 10), the *F*-test and the *F\**-tests are equally powerful, and have the same consistency, whatever the correlation between the *SD* and the mean. On the other hand, the power of the *W*-test depends on the correlation between the *SD* and the mean [in line with @Liu_2015]. When the group with the largest mean has the largest variance (Figure 9), the largest deviation between group means and the general mean is given less weight, and as a consequence the *W*-test is less powerful than both other tests. At the same time, the test is slightly less consistent than both other tests. When the group with the largest mean has the smallest variance (Figure 10), the largest deviation between group means and the general mean is given more weight, and therefore the *W*-test is more powerful than both other tests. The test is also slightly more consistent than both other tests. 
+In Figures 10 to 15 (cells d to i in Table 1), the population variance is unequal between groups, meaning that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figures 10 and 11), the *F*-test and the *F\**-tests are equally powerful, and have the same consistency, whatever the correlation between the *SD* and the mean. On the other hand, the power of the *W*-test depends on the correlation between the *SD* and the mean [in line with @Liu_2015]. When the group with the largest mean has the largest variance (Figure 10), the largest deviation between group means and the general mean is given less weight, and as a consequence the *W*-test is less powerful than both other tests. At the same time, the test is slightly less consistent than both other tests. When the group with the largest mean has the smallest variance (Figure 11), the largest deviation between group means and the general mean is given more weight, and therefore the *W*-test is more powerful than both other tests. The test is also slightly more consistent than both other tests. 
 
-When sample sizes are unequal across groups, the power of the *F\**-test and the *F*-test are a function of the correlation between sample sizes and *SDs*. When there is a negative correlation between sample sizes and *SDs* (Figures 11 and 12), the *F*-test is always more powerful than the *F\**-test. Indeed, as was explained in the previous mathematical section, the *F*-test gives more weight to the smallest variance (the statistic is therefore increased) while the *F\**-test gives more weight to the largest variance (the statistic is therefore decreased). Conversely, when there is a positive correlation between sample sizes and *SDs* (Figures 13 and 14), the *F*-test is always more conservative than the F*\**-test, because the *F*-test gives more weight to the largest variance while the *F\**-test gives more weight to the smallest variance.
+When sample sizes are unequal across groups, the power of the *F\**-test and the *F*-test are a function of the correlation between sample sizes and *SDs*. When there is a negative correlation between sample sizes and *SDs* (Figures 12 and 13), the *F*-test is always more powerful than the *F\**-test. Indeed, as was explained in the previous mathematical section, the *F*-test gives more weight to the smallest variance (the statistic is therefore increased) while the *F\**-test gives more weight to the largest variance (the statistic is therefore decreased). Conversely, when there is a positive correlation between sample sizes and *SDs* (Figures 14 and 15), the *F*-test is always more conservative than the *F\**-test, because the *F*-test gives more weight to the largest variance while the *F\**-test gives more weight to the smallest variance.
 
 The power of the *W*-test is not a function of the correlation between sample sizes and *SDs*, but rather a function of the correlation between *SDs* and means. The test is more powerful when there is a negative correlation between *SDs* and means, and less powerful when there is a positive correlation between *SDs* and means. Note that for all tests, the effect of heteroscedasticity is approximately the same regardless of the shape of the distribution. Moreover, there is one constant observation in our simulations: whatever the configuration of the *n*-ratio, the consistency of the three tests is closer to zero when there is a negative correlation between the *SD* and the mean (meaning that the group with the highest mean has the lower variance). 
 
@@ -319,14 +323,10 @@ We can draw the following conclusions about the statistical power of the three t
 
 # Recommendations
 
-Taking both the effects of the assumption violations on the alpha risk and on the power, we provide five recommendations:
+Taking both the effects of the assumption violations on the alpha risk and on the power, we recommend to use the *W*-test instead of the *F*-test to compare groups means. The *F*-test and *F*\*-test should be avoided, because a) the equal variances assumption is often unrealistic, b) tests of the equal variances assumption will often fail to detect differences when these are present, c) the loss of power when using the *W*-test is very small (and often even negligible), and d) the gain in Type I error control is considerable under a wide range of realistic conditions. Also, we recommend the use of balanced designs (i.e. same sample sizes in each group) whenever possible. When using the *W*-test, the Type I error rate is a function of criteria such as the skewness of the distributions, and whether skewness is combined with unequal variances and unequal samples sizes between groups. Our simulations show that the Type I error rate control is in general slightly better with balanced designs. 
 
-1. Use the *W*-test instead of the *F*-test to compare groups means. The *F*-test and *F*\*-test should be avoided, because the equal variances assumption is often unrealistic, tests of the equal variances assumption will often fail to detect differences when these are present, the loss of power when using the *W*-test is very small (and often even negligible), and the gain in Type I error control is considerable under a wide range of realistic conditions.
-2. Do not neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g. histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g. variance, skewness, kurtosis) seems to vary between groups, comparing results of the *W*-test with results of a nonparametric procedure is useful in order to better understand the data.  
-3. With small sample sizes (i.e. less than 50 observations when comparing at most four groups, 100 observations when comparing more than four groups), the *W*-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. Unless you have good reasons to believe that distributions underlying the data have small kurtosis and skewness, we recommend the use of alternative tests that are not based on means comparison, such as the trimmed means test [@Erceg-Hurn_Mirosevich_2008] \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution . Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information, see @Erceg-Hurn_Mirosevich_2008.
-4. Perform a-priori power analyses. Fifty subjects per group are generally enough to control the Type I error rate, but power analyses are still important in order to determine the required sample sizes to achieve sufficient power to detect a statistically significant difference [see @Albers_and_Lakens_2018]. 
-5. Use balanced designs (i.e. same sample size in each group) whenever possible. When using the *W*-test, the Type I error rate is a function of criteria such as the skewness of the distributions, and whether skewness is combined with unequal variances and unequal sample sizes between groups. Our simulations show that the Type I error rate control is in general slightly better with balanced designs. 
- 
+Note that the *W*-test suffers from limitations and cannot be used in all situations. First, as previously mentioned, *W*-test, as all tests based on means, does not allow researchers to compare other relevant parameters of a distribution than the mean. For these reason, we recommend to never neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g. histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g. variance, skewness, kurtosis) seems to vary between groups, comparing results of the *W*-test with results of a nonparametric procedure is useful in order to better understand the data. Second, with small sample sizes (i.e. less than 50 observations per group when comparing at most four groups, 100 observations when comparing more than four groups), the *W*-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. Unless you have good reasons to believe that distributions underlying the data have small kurtosis and skewness, we recommend to avoid alternative tests that are not based on means comparison, in favour of alternatives such as the trimmed means test [@Erceg-Hurn_Mirosevich_2008] \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution. Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information, see @Erceg-Hurn_Mirosevich_2008.
+
 \newpage
 
 # References
