--- a/W-test.tex
+++ b/W-test.tex
@@ -103,7 +103,7 @@ First author performed simulations. First, second and fourth authors contributed
 Correspondence concerning this article should be addressed to Marie Delacre, CP191, avenue F.D. Roosevelt 50, 1050 Bruxelles. E-mail: \href{mailto:marie.delacre@ulb.ac.be}{\nolinkurl{marie.delacre@ulb.ac.be}}}
 
 \abstract{
-Student's \emph{t}-test and classical \emph{F}-test ANOVA rely on the assumptions that two or more samples are independent, and that independent and identically distributed residuals are normal and have equal variances between groups. We focus on the assumptions of normality and equality of variances, and argue that these assumptions are often unrealistic in the field of psychology. We underline the current lack of attention to these assumptions through an analysis of researchers' practices. Through Monte Carlo simulations we illustrate the consequences of performing the classic parametric \emph{F}-test for ANOVA when the test assumptions are not met on the Type I error rate and statistical power. Under realistic deviations from the assumption of equal variances the classic \emph{F}-test can yield severely biased results and lead to invalid statistical inferences. We examine two common alternatives to the \emph{F}-test, namely the Welch's ANOVA (\emph{W}-test) and the Brown-Forsythe test (\emph{F*}-test). Our simulations show that the \emph{W}-test is a better alternative and we therefore recommend using the \emph{W}-test by default when comparing means. We provide a detailed example explaining how to perform the \emph{W}-test in SPSS and R. We summarize our conclusions in five practical recommendations that researchers can use to improve their statistical practices.
+Student's \emph{t}-test and classical \emph{F}-test ANOVA rely on the assumptions that two or more samples are independent, and that independent and identically distributed residuals are normal and have equal variances between groups. We focus on the assumptions of normality and equality of variances, and argue that these assumptions are often unrealistic in the field of psychology. We underline the current lack of attention to these assumptions through an analysis of researchers' practices. Through Monte Carlo simulations we illustrate the consequences of performing the classic parametric \emph{F}-test for ANOVA when the test assumptions are not met on the Type I error rate and statistical power. Under realistic deviations from the assumption of equal variances the classic \emph{F}-test can yield severely biased results and lead to invalid statistical inferences. We examine two common alternatives to the \emph{F}-test, namely the Welch's ANOVA (\emph{W}-test) and the Brown-Forsythe test (\emph{F*}-test). Our simulations show that under a range of realistic scenariosthe \emph{W}-test is a better alternative and we therefore recommend using the \emph{W}-test by default when comparing means. We provide a detailed example explaining how to perform the \emph{W}-test in SPSS and R. We summarize our conclusions in five practical recommendations that researchers can use to improve their statistical practices.
 
 
 }
@@ -360,26 +360,26 @@ When consistency equals zero, the observed power is consistent with the nominal 
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2f} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,negative correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell f in Table 1)}\label{fig:unnamed-chunk-12}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2f} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, negative correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell f in Table 1)}\label{fig:unnamed-chunk-12}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2g} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,negative correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell h in Table 1)}\label{fig:unnamed-chunk-13}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2g} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, negative correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell h in Table 1)}\label{fig:unnamed-chunk-13}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2h} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,positive correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell e  in Table 1)}\label{fig:unnamed-chunk-14}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2h} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, positive correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell e  in Table 1)}\label{fig:unnamed-chunk-14}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2i} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,positive correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell i  in Table 1)}\label{fig:unnamed-chunk-15}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2i} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, positive correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell i  in Table 1)}\label{fig:unnamed-chunk-15}
 \end{figure}
 
 In Figures 7, 8 and 9 (cells a, b, and c in Table 1), the population variance is equal between all groups, meaning that the homoscedasticity assumption is met. When distributions are normal, the \emph{W}-test is slightly less powerful than the \emph{F}-test and \emph{F*}-test, even through differences are very small. With all other distributions, the \emph{W}-test is generally more powerful than the \emph{F*}-test and \emph{F}-test, even with heavy-tailed distributions, which is in contrast with previous findings (Wilcox, 1998). Wilcox (1998) concluded that there is a loss of power when means from heavy-tailed distributions (e.g.~double exponential or a mixed normal distribution) are compared to means from normal distributions. This finding is based on the argument that heavy-tailed distributions are associated with bigger standard deviations than normal distributions, and that the effect size for such distributions is therefore smaller (Wilcox, 2011). However, this conclusion is based on a common conflation of kurtosis and the standard deviation, which are completely independent (DeCarlo, 1997). One can find distributions that have similar \emph{SD} but different kurtosis (see Appendix 2). However, while the \emph{W}-test is more powerful than the \emph{F}-test and the \emph{F*}-test in many situations,it is a bit less consistent with theoretical expectations than both other tests in the sense that the \emph{W}-test is generally more powerful than expected (especially with high kurtosis, or when asymmetries go in opposite directions). This is due to the fact that the \emph{W}-test is more impacted by the distribution shape, in line with observations by Harwell et al. (1992). Note that differences between \emph{W}-test and other tests, in terms of consistency, are very small.
 
 In Figures 10 to 15 (cells d to i in Table 1), the population variance is unequal between groups, meaning that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figures 10 and 11), the \emph{F}-test and the \emph{F*}-tests are equally powerful, and have the same consistency, whatever the correlation between the \emph{SD} and the mean. On the other hand, the power of the \emph{W}-test depends on the correlation between the \emph{SD} and the mean (in line with Liu, 2015). When the group with the largest mean has the largest variance (Figure 10), the largest deviation between group means and the general mean is given less weight, and as a consequence the \emph{W}-test is less powerful than both other tests. At the same time, the test is slightly less consistent than both other tests. When the group with the largest mean has the smallest variance (Figure 11), the largest deviation between group means and the general mean is given more weight, and therefore the \emph{W}-test is more powerful than both other tests. The test is also slightly more consistent than both other tests.
 
-When sample sizes are unequal across groups, the power of the \emph{F*}-test and the \emph{F}-test are a function of the correlation between sample sizes and \emph{SDs}. When there is a negative correlation between sample sizes and \emph{SDs} (Figures 12 and 13), the \emph{F}-test is always more powerful than the \emph{F*}-test. Indeed, as was explained in the previous mathematical section, the \emph{F}-test gives more weight to the smallest variance (the statistic is therefore increased) while the \emph{F*}-test gives more weight to the largest variance (the statistic is therefore decreased). Conversely, when there is a positive correlation between sample sizes and \emph{SDs} (Figures 14 and 15), the \emph{F}-test is always more conservative than the F\emph{*}-test, because the \emph{F}-test gives more weight to the largest variance while the \emph{F*}-test gives more weight to the smallest variance.
+When sample sizes are unequal across groups, the power of the \emph{F*}-test and the \emph{F}-test are a function of the correlation between sample sizes and \emph{SDs}. When there is a negative correlation between sample sizes and \emph{SDs} (Figures 12 and 13), the \emph{F}-test is always more powerful than the \emph{F*}-test. Indeed, as was explained in the previous mathematical section, the \emph{F}-test gives more weight to the smallest variance (the statistic is therefore increased) while the \emph{F*}-test gives more weight to the largest variance (the statistic is therefore decreased). Conversely, when there is a positive correlation between sample sizes and \emph{SDs} (Figures 14 and 15), the \emph{F}-test is always more conservative than the \emph{F*}-test, because the \emph{F}-test gives more weight to the largest variance while the \emph{F*}-test gives more weight to the smallest variance.
 
 The power of the \emph{W}-test is not a function of the correlation between sample sizes and \emph{SDs}, but rather a function of the correlation between \emph{SDs} and means. The test is more powerful when there is a negative correlation between \emph{SDs} and means, and less powerful when there is a positive correlation between \emph{SDs} and means. Note that for all tests, the effect of heteroscedasticity is approximately the same regardless of the shape of the distribution. Moreover, there is one constant observation in our simulations: whatever the configuration of the \emph{n}-ratio, the consistency of the three tests is closer to zero when there is a negative correlation between the \emph{SD} and the mean (meaning that the group with the highest mean has the lower variance).
 
@@ -403,7 +403,7 @@ We can draw the following conclusions about the statistical power of the three t
 
 Taking both the effects of the assumption violations on the alpha risk and on the power, we recommend to use the \emph{W}-test instead of the \emph{F}-test to compare groups means. The \emph{F}-test and \emph{F}*-test should be avoided, because a) the equal variances assumption is often unrealistic, b) tests of the equal variances assumption will often fail to detect differences when these are present, c) the loss of power when using the \emph{W}-test is very small (and often even negligible), and d) the gain in Type I error control is considerable under a wide range of realistic conditions. Also, we recommend the use of balanced designs (i.e.~same sample sizes in each group) whenever possible. When using the \emph{W}-test, the Type I error rate is a function of criteria such as the skewness of the distributions, and whether skewness is combined with unequal variances and unequal samples sizes between groups. Our simulations show that the Type I error rate control is in general slightly better with balanced designs.
 
-Note that the \emph{W}-test suffers from limitations and cannot be used in all situations. First, as previously mentioned, \emph{W}-test, as all tests based on means, does not allow researchers to compare other relevant parameters of a distribution than the mean. For these reason, we recommend to never neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g.~histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g.~variance, skewness, kurtosis) seems to vary between groups, comparing results of the \emph{W}-test with results of a nonparametric procedure is useful in order to better understand the data. Second, with small sample sizes (i.e.~less than 50 observations per group when comparing at most four groups, 100 observations when comparing more than four groups), the \emph{W}-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. Unless you have good reasons to believe that distributions underlying the data have small kurtosis and skewness, we recommend to avoid alternative tests that are not based on means comparison, in favour of alternatives such as the trimmed means test (Erceg-Hurn \& Mirosevich, 2008) \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution . Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information, see Erceg-Hurn and Mirosevich (2008).
+Note that the \emph{W}-test suffers from limitations and cannot be used in all situations. First, as previously mentioned, \emph{W}-test, as all tests based on means, does not allow researchers to compare other relevant parameters of a distribution than the mean. For these reason, we recommend to never neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g.~histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g.~variance, skewness, kurtosis) seems to vary between groups, comparing results of the \emph{W}-test with results of a nonparametric procedure is useful in order to better understand the data. Second, with small sample sizes (i.e.~less than 50 observations per group when comparing at most four groups, 100 observations when comparing more than four groups), the \emph{W}-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. Unless you have good reasons to believe that distributions underlying the data have small kurtosis and skewness, we recommend to avoid alternative tests that are not based on means comparison, in favour of alternatives such as the trimmed means test (Erceg-Hurn \& Mirosevich, 2008) \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution. Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information, see Erceg-Hurn and Mirosevich (2008).
 
 \newpage
 
